objects/ssot__ClaimCase__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CaseId__c</fullName>
        <label>Case</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimCase_CaseId_map_Case_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClaimCase_CaseId_map_Case_Id_N_1</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>ClaimCase_CaseId_map_Case_Id_N_1</relationshipLabel>
        <relationshipName>ClaimCase_CaseId_map_Case_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimCase_ClaimId_map_Claim_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClaimCase_ClaimId_map_Claim_Id_N_1</label>
        <referenceTo>ssot__Claim__dlm</referenceTo>
        <relationshipLabel>ClaimCase_ClaimId_map_Claim_Id_N_1</relationshipLabel>
        <relationshipName>ClaimCase_ClaimId_map_Claim_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimId__c</fullName>
        <label>Claim</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Claim Case Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>